--- a/account/m_account_change_bankcard.html
+++ b/account/m_account_change_bankcard.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/m_common.css" />
-		<link rel="stylesheet" type="text/css" href="../css/m_account_zhifubao.css" />
+		<link rel="stylesheet" type="text/css" href="../css/m_account_bankcard.css" />
 	</head>
 
 	<body>
@@ -214,7 +214,7 @@
 				mui.ajax({
 					url: sendtelcode_url,
 					data: {
-						action: 'change_zhifubao',
+						action: 'change_bankcard',
 						token: UserInfo.token()
 					},
 					timeout: 3000,
