--- a/account/m_account_bind_bankcard.html
+++ b/account/m_account_bind_bankcard.html
@@ -68,8 +68,10 @@
 						select_box.innerHTML = '<option value="0">请选择相应的开户行</option>';
 						for (var i=0; i<bank_name.length; i++){
 							var option_item = document.createElement('option');
-							option_item.innerHTML = '<option value="' + bank_name[i][0] + '">'+ bank_name[i][1] +'</option>';
-							alert(bank_name[i][0]);
+							option_item.value = bank_name[i][0];
+							option_item.innerText = bank_name[i][1];
+//							option_item.innerHTML = '<option value="' + bank_name[i][0] + '">'+ bank_name[i][1] +'</option>';
+//							alert(option_item);
 							select_box.appendChild(option_item);
 						}
 					},
@@ -113,12 +115,12 @@
 				var subbranch = document.getElementById('subbranch').value;
 				var real_name = document.getElementById('real_name').value;
 				var card_number = document.getElementById('card_number').value;
-
 				var bank = document.getElementById("bank").value;
+//				var options = document.getElementById("bank").options;
+//				var bank_value = options[index].value;
 				var re_account = /^[\u2E80-\u9FFF]+$/; //验证中文
 				var re_number = /^[0-9]*$/; //验证数字
 				var re_card = /^[\d\s]+$/; //验证银行卡号
-				alert(bank);
 				if(bank == 0) {
 					mui.alert("请选择相应的开户行");
 					return;
