--- a/account/m_account_bind_bankcard.html
+++ b/account/m_account_bind_bankcard.html
@@ -116,6 +116,7 @@
 				var real_name = document.getElementById('real_name').value;
 				var card_number = document.getElementById('card_number').value;
 				var bank = document.getElementById("bank").value;
+				console.log(bank);
 //				var options = document.getElementById("bank").options;
 //				var bank_value = options[index].value;
 				var re_account = /^[\u2E80-\u9FFF]+$/; //验证中文
