--- a/account/m_account_bind_bankcard.html
+++ b/account/m_account_bind_bankcard.html
@@ -154,13 +154,17 @@
 						token: UserInfo.token()
 					},
 					success: function(ret) {
-						mui.alert(ret.msg, callback = function() {
-							if(ret.code == 0) {
-								view = plus.webview.getWebviewById("m_account_index.html");
-        						mui.fire(view, 'refresh_userinfo');
+						if(ret.code == 0) {
+							view = plus.webview.getWebviewById("m_account_index.html");
+							mui.fire(view, 'refresh_userinfo');
+							mui.alert(ret.msg, callback = function() {
 								window.history.back();
-							}
-						});
+							});
+						}
+						else{
+							mui.alert(ret.msg);
+						}
+						
 					},
 					error: function(xhr, type, errorThrown) {
 						alert(type);
