--- a/account/m_account_change_bankcard.html
+++ b/account/m_account_change_bankcard.html
@@ -12,24 +12,9 @@
 	<body>
 		<header id="header" class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">支付宝更改</h1>
+			<h1 class="mui-title">银行卡更改</h1>
 		</header>
 		<div class="mui-content">
-			<!--<form class="mui-input-group">
-				<div class="mui-input-row">
-					<label>支付宝姓名</label>
-					<input id="zhifubao_name" type="text" placeholder="请输入支付宝绑定的真实姓名">
-				</div>
-				<div class="mui-input-row">
-					<label>支付宝帐号</label>
-					<input id="zhifubao" type="text" placeholder="请输入真实的支付宝账户">
-				</div>
-				<div class="mui-input-row">
-					<label>手机验证码</label>
-					<input id="telcode" type="text" placeholder="请输入验证码">
-					<button id="gettelcode" type="button" class=" huoqu mui-btn-blue mui-btn-outlined">获取验证码</button>
-				</div>
-			</form>-->
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>请选择银行</label>
@@ -109,49 +94,6 @@
 				sendTelVerifyCodeImageV();
 				settime(this);
 			});
-//			document.getElementById("Btn").addEventListener('tap', function() {
-//				var zhifubao = document.getElementById('zhifubao').value;
-//				var zhifubao_name = document.getElementById('zhifubao_name').value;
-//				var re_account = /^[\u2E80-\u9FFF]+$/;
-//				if(!re_account.test(zhifubao_name)) {
-//					mui.alert("请输入正确的支付宝绑定的真实姓名");
-//					return;
-//				}
-//				if(!zhifubao || !zhifubao_name) {
-//					mui.alert("支付宝账号或姓名不能为空！", '提示');
-//					return;
-//				}
-//				var telcode = document.getElementById("telcode").value;
-//				if(!telcode) {
-//					mui.alert('请输入手机验证码！', '提示');
-//					return;
-//				}
-//				if(telcode.length != 6) {
-//					mui.alert('您输入的手机验证码格式有误，请重新输入！', '提示');
-//					return;
-//				}
-//				mui.ajax({
-//					url: 'http://m.wafuli.cn/app/change_zhifubao/',
-//					dataType: "json",
-//					type: 'POST',
-//					data: {
-//						account: zhifubao,
-//						name: zhifubao_name,
-//						telcode: telcode,
-//						token: UserInfo.token()
-//					},
-//					success: function(ret) {
-//						mui.alert(ret.msg, callback = function() {
-//							if(ret.code == 0) {
-//								window.history.back();
-//							}
-//						});
-//					},
-//					error: function() {
-//						alert("请检查网络连接");
-//					}
-//				});
-//			});
 			document.getElementById("Btn").addEventListener('tap', function() {
 				var subbranch = document.getElementById('subbranch').value;
 				var real_name = document.getElementById('real_name').value;
