--- a/m_account_index.html
+++ b/m_account_index.html
@@ -107,6 +107,12 @@
 			            <p>渠道数据提交</p>
 			        </a>
 		        </li>
+		        <li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3 li-common">
+			        <a class="icon-url" href="account/m_account_vip.html">
+			        	<span class="vip-icon"></span>
+            			<p>会员中心</p>
+			        </a>
+		        </li>
 		        
 			</ul>
 
