--- a/m_index.html
+++ b/m_index.html
@@ -53,15 +53,15 @@
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="m_welfare.html">
 				<i class="icon iconfont">&#xe649;</i>
-            	<span>免费福利</span>
+            	<span>红包福利</span>
 			</a>
 			<a class="mui-tab-item" href="m_task.html">
-				<i class="icon iconfont">&#xe641;</i>
-            	<span>体验福利</span>
+				<i class="icon iconfont">&#xe63f;</i>
+            	<span>任务赚</span>
 			</a>
 			<a class="mui-tab-item" href="m_finance.html">
-				<i class="icon iconfont">&#xe63f;</i>
-            	<span>理财福利</span>
+				<i class="icon iconfont">&#xe612;</i>
+            	<span>理财返利</span>
 			</a>
 			<a class="mui-tab-item" href="m_account_index.html">
 				<i class="icon iconfont">&#xe652;</i>
