--- a/m_welfare.html
+++ b/m_welfare.html
@@ -70,13 +70,13 @@
 		            	<li>
 		                	<a id="html/m_activity.html">
 		                    	<i class="icon iconfont ic-03">&#xe8f1;</i>
-		                        <span>要赚福币</span>
+		                        <span>新手奖励</span>
 		                    </a>
 		                </li>
 		            	<li>
 		                	<a id="html/m_information.html">
-		                    	<i class="icon iconfont ic-04"></i>
-		                        <span>我有故事</span>
+		                    	<i class="icon iconfont ic-04">&#xe641;</i>
+		                        <span>推荐有礼</span>
 		                    </a>
 		                </li>
 		            	<li>
@@ -87,18 +87,18 @@
 		                </li>
 		            	<li>
 		                	<a id="html/m_youhuiquan.html">
-		                    	<i class="icon iconfont ic-06"></i>
-		                        <span>优惠券</span>
+		                    	<i class="icon iconfont ic-06">&#xe655;</i>
+		                        <span>福利购</span>
 		                    </a>
 		                </li>
 		            	<li>
 		                	<a id="html/m_baoyou.html">
-		                    	<i class="icon iconfont ic-07"></i>
-		                        <span><number>9.9</number>包邮</span>
+		                    	<i class="icon iconfont ic-07">&#xe6fe;</i>
+		                        <span><number>9.9</number>信用卡</span>
 		                    </a>
 		                </li>
 		            	<li id="weixin_btn">
-		                    	<i class="icon iconfont ic-08"></i>
+		                    	<i class="icon iconfont ic-08">&#xe606;</i>
 		                        <span>微信公众号</span>
 		                </li>
 		            </ul>
@@ -485,25 +485,38 @@
 						image = 'images/blank.jpg';
 					}
 					var li = document.createElement('li');
-					li.className = 'mui-table-view-cell';
-					str_block = '<a class="clearfix" data_id="' + wel.id + '" data_type="' + wel.type + '"><img id="news_img_' + wel.id + '" src="'+ 
-									image + '" /><div class="li-info"><h6>' + wel.title + '</h6>';
-					if (wel.view>1000){
-						str_block += '<i class="icon iconfont"></i>';
-					}
-					else if ( wel.pubDate > Date.parse(new Date()) -24*60*60*1000 ){
-					 	str_block += '<i class="icon iconfont"></i>';
-					}
-					str_block += '<p class="first">';
-					marks = [wel.mark1, wel.mark2, wel.mark3];
-					for (var j in marks){
-						if(marks[j]){
-							str_block += '<span>' + marks[j] + '</span>';
-						}
-					}
-					str_block += '</p><p><span class="s1 icon-renzhengshangjia">'+wel.source+'</span></p>'+
-									'<p><span class="s3 icon-time">'+wel.time+'</span><span class="s2 icon-yanjing">'+
-									wel.view +'</span></p></div></a>';
+//					li.className = 'mui-table-view-cell';
+//					str_block = '<a class="clearfix" data_id="' + wel.id + '" data_type="' + wel.type + '"><img id="news_img_' + wel.id + '" src="'+ 
+//									image + '" /><div class="li-info"><h6>' + wel.title + '</h6>';
+//					if (wel.view>1000){
+//						str_block += '<i class="icon iconfont"></i>';
+//					}
+//					else if ( wel.pubDate > Date.parse(new Date()) -24*60*60*1000 ){
+//					 	str_block += '<i class="icon iconfont"></i>';
+//					}
+//					str_block += '<p class="first">';
+//					marks = [wel.mark1, wel.mark2, wel.mark3];
+//					for (var j in marks){
+//						if(marks[j]){
+//							str_block += '<span>' + marks[j] + '</span>';
+//						}
+//					}
+//					str_block += '</p><p><span class="s1 icon-renzhengshangjia">'+wel.source+'</span></p>'+
+//									'<p><span class="s3 icon-time">'+wel.time+'</span><span class="s2 icon-yanjing">'+
+//									wel.view +'</span></p></div></a>';
+                    li.className = 'mui-table-view-cell hongbao';
+                    str_block = '<a class="clearfix" data_id="' + wel.id + '" data_type="' + wel.type + '"><img id="news_img_' + wel.id + '" class="hongbao__img" src="'+ 
+                                    image + '" /><div class="hongbao__title"><h6>' + wel.title;
+                    if (wel.view>1000){
+                        str_block += '<i class="icon iconfont"></i>';
+                    }
+                    else if ( wel.pubDate > Date.parse(new Date()) -24*60*60*1000 ){
+                        str_block += '<i class="icon iconfont"></i>';
+                    }
+                    str_block += '</h6><h6 class="hongbao__subtitle">' + wel.subtitle + '</h6>';
+                    str_block += '<p class="hongbao__detail">'+
+                                            '<span class="hongbao__source">'+wel.provider+'</span><span class="hongbao__time">'+wel.time_limit+'</span><span class="hongbao__look">阅读量:'+wel.view_count+'</span>'+
+                                            '</p></a>';
 					li.innerHTML = str_block;
 					news_group.appendChild(li);
 				}
