--- a/html/m_detail_welfare.html
+++ b/html/m_detail_welfare.html
@@ -97,7 +97,7 @@
 								document.getElementById('number_display').innerText = ret.num;
 								document.getElementById('time_display').innerText = ret.time;
 								
-								document.getElementById('support').setAttribute('data-support', wel.id);
+								document.getElementById('support').setAttribute('data-support', ret.id);
 								document.getElementById('support_up_num').innerText = ret.up;
 								document.getElementById('support_down_num').innerText = ret.down;
 								exp_url = ret.url;
