--- a/m_index.html
+++ b/m_index.html
@@ -60,7 +60,7 @@
             	<span>任务赚</span>
 			</a>
 			<a class="mui-tab-item" href="m_finance.html">
-				<i class="icon iconfont">&#xe612;</i>
+				<i style="font-size: 2.2rem;" class="icon iconfont">&#xe61f;</i>
             	<span>理财返利</span>
 			</a>
 			<a class="mui-tab-item" href="m_account_index.html">
