--- a/m_welfare.html
+++ b/m_welfare.html
@@ -94,7 +94,7 @@
 		            	<li>
 		                	<a id="html/m_baoyou.html">
 		                    	<i class="icon iconfont ic-07">&#xe6fe;</i>
-		                        <span><number>9.9</number>信用卡</span>
+		                        <span>信用卡</span>
 		                    </a>
 		                </li>
 		            	<li id="weixin_btn">
