--- a/html/m_hongbao.html
+++ b/html/m_hongbao.html
@@ -102,7 +102,7 @@
 		<script>
 			var host = "http://m.wafuli.cn";
 			mui.init();
-			var get_hongbao_url = "http://m.wafuli.cn/hongbao_json/";
+			var get_hongbao_url = "http://test.wafuli.cn/hongbao_json/";
 				mui.init();
 
 			var deceleration = mui.os.ios?0.003:0.0009;
