--- a/m_welfare.html
+++ b/m_welfare.html
@@ -94,7 +94,7 @@
 		            	<li>
 		                	<a id="">
 		                    	<i class="icon iconfont ic-07">&#xe6fe;</i>
-		                        <span>敬请期待</span>
+		                        <span>信用卡</span>
 		                    </a>
 		                </li>
 		            	<li id="weixin_btn">
@@ -493,25 +493,6 @@
 						image = 'images/blank.jpg';
 					}
 					var li = document.createElement('li');
-//					li.className = 'mui-table-view-cell';
-//					str_block = '<a class="clearfix" data_id="' + wel.id + '" data_type="' + wel.type + '"><img id="news_img_' + wel.id + '" src="'+ 
-//									image + '" /><div class="li-info"><h6>' + wel.title + '</h6>';
-//					if (wel.view>1000){
-//						str_block += '<i class="icon iconfont"></i>';
-//					}
-//					else if ( wel.pubDate > Date.parse(new Date()) -24*60*60*1000 ){
-//					 	str_block += '<i class="icon iconfont"></i>';
-//					}
-//					str_block += '<p class="first">';
-//					marks = [wel.mark1, wel.mark2, wel.mark3];
-//					for (var j in marks){
-//						if(marks[j]){
-//							str_block += '<span>' + marks[j] + '</span>';
-//						}
-//					}
-//					str_block += '</p><p><span class="s1 icon-renzhengshangjia">'+wel.source+'</span></p>'+
-//									'<p><span class="s3 icon-time">'+wel.time+'</span><span class="s2 icon-yanjing">'+
-//									wel.view +'</span></p></div></a>';
                     li.className = 'mui-table-view-cell hongbao';
                     str_block = '<a class="clearfix" data_id="' + wel.id + '" data_type="' + wel.type + '"><img id="news_img_' + wel.id + '" class="hongbao__img" src="'+ 
                                     image + '" /><h6 class="hongbao__title"><span class = "hongbao__innertitle">' + wel.title + '</span>';
